# btd_exercise

./: .gitignore  README.md
hello_world/: README.md
hello_world/main/: hello_world_main.c
tcp_client/: .gitignore  CMakeLists.txt  README.md  btd_exercise2.ipynb  partitions.csv  reflections.md  sdkconfig  sdkconfig.old  values.csv
tcp_client/components/M5StickCPlus/: CMakeLists.txt
tcp_client/main/: CMakeLists.txt  btd_audio.cpp  btd_audio.h  btd_bandpass.c  btd_bandpass.h  btd_battery.cpp  btd_battery.h  btd_button.cpp  btd_button.h  btd_buzzer.c  btd_config.c  btd_config.h  btd_controller.cpp  btd_display.cpp  btd_display.h  btd_exercise2.c  btd_exercise2.cpp  btd_http.c  btd_http.h  btd_imu.c  btd_imu.cpp  btd_imu.h  btd_lowpass.c  btd_lowpass.h  btd_movement.cpp  btd_movement.h  btd_qr.cpp  btd_qr.h  btd_states.h  btd_stats.c  btd_stats.h  btd_vibration.c  btd_vibrator.cpp  btd_vibrator.h  btd_webui.cpp  btd_webui.h  btd_wifi.c  btd_wifi.h  exercise2_main.c  idf_component.yml  (+1 more)
tcp_client/main/screen/: btd_screen.c
tcp_client/server/: server.py  server2.py
